Buttons to buy things + animated money indicator

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,5 +6,6 @@ html, body {
     text-align: center;
     font-weight: lighter;
     overflow: hidden;
+    background: #111;
 }
 * { box-sizing: border-box; }
